# iotspool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/toolchains/: arm-none-eabi-gcc.cmake
docs/: design.md
examples/: arm_smoke.c
examples/rpi/: CMakeLists.txt  main.c
include/: iotspool.h
src/: backoff.c  backoff.h  crc32.c  crc32.h  record.c  record.h  sha256.c  sha256.h  spool.c  store_posix.c  store_posix.h
tests/: run_tests  test_iotspool.c  test_main.c  unity.c  unity.h
